docs/cobblemon-tags/1.6.1/ItemTags.md
# Item Tags

This file contains tags related to items in cobblemon.

## Tags:

<details>
<summary><b>Tag:</b> #cobblemon:ability_changers</summary>

- cobblemon:ability_capsule
- cobblemon:ability_patch

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ancient_poke_balls</summary>

- cobblemon:ancient_azure_ball
- cobblemon:ancient_citrine_ball
- cobblemon:ancient_feather_ball
- cobblemon:ancient_gigaton_ball
- cobblemon:ancient_great_ball
- cobblemon:ancient_heavy_ball
- cobblemon:ancient_ivory_ball
- cobblemon:ancient_jet_ball
- cobblemon:ancient_leaden_ball
- cobblemon:ancient_origin_ball
- cobblemon:ancient_poke_ball
- cobblemon:ancient_roseate_ball
- cobblemon:ancient_slate_ball
- cobblemon:ancient_ultra_ball
- cobblemon:ancient_verdant_ball
- cobblemon:ancient_wing_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apples</summary>

- cobblemon:sweet_apple
- cobblemon:tart_apple

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorns</summary>

- cobblemon:black_apricorn
- cobblemon:blue_apricorn
- cobblemon:green_apricorn
- cobblemon:pink_apricorn
- cobblemon:red_apricorn
- cobblemon:white_apricorn
- cobblemon:yellow_apricorn

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_logs</summary>

- cobblemon:apricorn_log
- cobblemon:apricorn_wood
- cobblemon:stripped_apricorn_log
- cobblemon:stripped_apricorn_wood

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_poke_balls</summary>

- cobblemon:fast_ball
- cobblemon:friend_ball
- cobblemon:heavy_ball
- cobblemon:level_ball
- cobblemon:love_ball
- cobblemon:lure_ball
- cobblemon:moon_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:apricorn_sprouts</summary>

- cobblemon:black_apricorn_seed
- cobblemon:blue_apricorn_seed
- cobblemon:green_apricorn_seed
- cobblemon:pink_apricorn_seed
- cobblemon:red_apricorn_seed
- cobblemon:white_apricorn_seed
- cobblemon:yellow_apricorn_seed

</details>

<details>
<summary><b>Tag:</b> #cobblemon:azalea_tree</summary>

- minecraft:azalea
- minecraft:flowering_azalea

</details>

<details>
<summary><b>Tag:</b> #cobblemon:battle_items</summary>

- cobblemon:dire_hit
- cobblemon:guard_spec
- cobblemon:x_accuracy
- cobblemon:x_attack
- cobblemon:x_defence
- cobblemon:x_special_attack
- cobblemon:x_special_defence
- cobblemon:x_speed

</details>

<details>
<summary><b>Tag:</b> #cobblemon:berries</summary>

- cobblemon:aguav_berry
- cobblemon:apicot_berry
- cobblemon:aspear_berry
- cobblemon:babiri_berry
- cobblemon:belue_berry
- cobblemon:bluk_berry
- cobblemon:charti_berry
- cobblemon:cheri_berry
- cobblemon:chesto_berry
- cobblemon:chilan_berry
- cobblemon:chople_berry
- cobblemon:coba_berry
- cobblemon:colbur_berry
- cobblemon:cornn_berry
- cobblemon:custap_berry
- cobblemon:durin_berry
- cobblemon:enigma_berry
- cobblemon:figy_berry
- cobblemon:ganlon_berry
- cobblemon:grepa_berry
- cobblemon:haban_berry
- cobblemon:hondew_berry
- cobblemon:hopo_berry
- cobblemon:iapapa_berry
- cobblemon:jaboca_berry
- cobblemon:kasib_berry
- cobblemon:kebia_berry
- cobblemon:kee_berry
- cobblemon:kelpsy_berry
- cobblemon:lansat_berry
- cobblemon:leppa_berry
- cobblemon:liechi_berry
- cobblemon:lum_berry
- cobblemon:mago_berry
- cobblemon:magost_berry
- cobblemon:maranga_berry
- cobblemon:micle_berry
- cobblemon:nanab_berry
- cobblemon:nomel_berry
- cobblemon:occa_berry
- cobblemon:oran_berry
- cobblemon:pamtre_berry
- cobblemon:passho_berry
- cobblemon:payapa_berry
- cobblemon:pecha_berry
- cobblemon:persim_berry
- cobblemon:petaya_berry
- cobblemon:pinap_berry
- cobblemon:pomeg_berry
- cobblemon:qualot_berry
- cobblemon:rabuta_berry
- cobblemon:rawst_berry
- cobblemon:razz_berry
- cobblemon:rindo_berry
- cobblemon:roseli_berry
- cobblemon:rowap_berry
- cobblemon:salac_berry
- cobblemon:shuca_berry
- cobblemon:sitrus_berry
- cobblemon:spelon_berry
- cobblemon:starf_berry
- cobblemon:tamato_berry
- cobblemon:tanga_berry
- cobblemon:touga_berry
- cobblemon:wacan_berry
- cobblemon:watmel_berry
- cobblemon:wepear_berry
- cobblemon:wiki_berry
- cobblemon:yache_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:black_tumblestones</summary>

- cobblemon:black_tumblestone
- cobblemon:black_tumblestone_block
- cobblemon:black_tumblestone_brick_slab
- cobblemon:black_tumblestone_brick_stairs
- cobblemon:black_tumblestone_brick_wall
- cobblemon:black_tumblestone_bricks
- cobblemon:black_tumblestone_cluster
- cobblemon:chiseled_black_tumblestone_bricks
- cobblemon:chiseled_polished_black_tumblestone
- cobblemon:large_budding_black_tumblestone
- cobblemon:medium_budding_black_tumblestone
- cobblemon:polished_black_tumblestone
- cobblemon:polished_black_tumblestone_slab
- cobblemon:polished_black_tumblestone_stairs
- cobblemon:polished_black_tumblestone_wall
- cobblemon:small_budding_black_tumblestone
- cobblemon:smooth_black_tumblestone
- cobblemon:smooth_black_tumblestone_slab
- cobblemon:smooth_black_tumblestone_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:black_tumblestone_bricks</summary>

- cobblemon:black_tumblestone_bricks
- cobblemon:chiseled_black_tumblestone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:boats</summary>

- cobblemon:apricorn_boat
- cobblemon:apricorn_chest_boat

</details>

<details>
<summary><b>Tag:</b> #cobblemon:cooked_meat</summary>

- minecraft:cooked_beef
- minecraft:cooked_chicken
- minecraft:cooked_cod
- minecraft:cooked_mutton
- minecraft:cooked_porkchop
- minecraft:cooked_rabbit
- minecraft:cooked_salmon

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dawn_stone_ores</summary>

- cobblemon:dawn_stone_ore
- cobblemon:deepslate_dawn_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:decorated_pot_sherds</summary>

- cobblemon:bygone_sherd
- cobblemon:capture_sherd
- cobblemon:dome_sherd
- cobblemon:helix_sherd
- cobblemon:nostalgic_sherd
- cobblemon:suspicious_sherd

</details>

<details>
<summary><b>Tag:</b> #cobblemon:deep_seas</summary>

- cobblemon:deep_sea_scale
- cobblemon:deep_sea_tooth

</details>

<details>
<summary><b>Tag:</b> #cobblemon:dusk_stone_ores</summary>

- cobblemon:deepslate_dusk_stone_ore
- cobblemon:dusk_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ethers</summary>

- cobblemon:elixir
- cobblemon:ether
- cobblemon:max_elixir
- cobblemon:max_ether

</details>

<details>
<summary><b>Tag:</b> #cobblemon:evolution_items</summary>

- #cobblemon:evolution_stones
- #cobblemon:teacups
- #cobblemon:teapots
- cobblemon:auspicious_armor
- cobblemon:berry_sweet
- cobblemon:black_augurite
- cobblemon:clover_sweet
- cobblemon:deep_sea_scale
- cobblemon:deep_sea_tooth
- cobblemon:dragon_scale
- cobblemon:dubious_disc
- cobblemon:electirizer
- cobblemon:flower_sweet
- cobblemon:galarica_cuff
- cobblemon:galarica_wreath
- cobblemon:kings_rock
- cobblemon:link_cable
- cobblemon:love_sweet
- cobblemon:magmarizer
- cobblemon:malicious_armor
- cobblemon:metal_coat
- cobblemon:oval_stone
- cobblemon:peat_block
- cobblemon:prism_scale
- cobblemon:protector
- cobblemon:razor_claw
- cobblemon:razor_fang
- cobblemon:reaper_cloth
- cobblemon:ribbon_sweet
- cobblemon:sachet
- cobblemon:shell_helmet
- cobblemon:star_sweet
- cobblemon:strawberry_sweet
- cobblemon:sweet_apple
- cobblemon:tart_apple
- cobblemon:upgrade
- cobblemon:whipped_dream

</details>

<details>
<summary><b>Tag:</b> #cobblemon:evolution_stones</summary>

- cobblemon:dawn_stone
- cobblemon:dusk_stone
- cobblemon:fire_stone
- cobblemon:ice_stone
- cobblemon:leaf_stone
- cobblemon:moon_stone
- cobblemon:shiny_stone
- cobblemon:sun_stone
- cobblemon:thunder_stone
- cobblemon:water_stone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:evolution_stone_blocks</summary>

- cobblemon:dawn_stone_block
- cobblemon:dusk_stone_block
- cobblemon:fire_stone_block
- cobblemon:ice_stone_block
- cobblemon:leaf_stone_block
- cobblemon:moon_stone_block
- cobblemon:shiny_stone_block
- cobblemon:sun_stone_block
- cobblemon:thunder_stone_block
- cobblemon:water_stone_block

</details>

<details>
<summary><b>Tag:</b> #cobblemon:experience_candies</summary>

- cobblemon:exp_candy_l
- cobblemon:exp_candy_m
- cobblemon:exp_candy_s
- cobblemon:exp_candy_xl
- cobblemon:exp_candy_xs
- cobblemon:rare_candy

</details>

<details>
<summary><b>Tag:</b> #cobblemon:feathers</summary>

- cobblemon:clever_feather
- cobblemon:genius_feather
- cobblemon:health_feather
- cobblemon:muscle_feather
- cobblemon:resist_feather
- cobblemon:swift_feather

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fire_stone_ores</summary>

- cobblemon:deepslate_fire_stone_ore
- cobblemon:fire_stone_ore
- cobblemon:nether_fire_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fossils</summary>

- cobblemon:armor_fossil
- cobblemon:claw_fossil
- cobblemon:cover_fossil
- cobblemon:dome_fossil
- cobblemon:fossilized_bird
- cobblemon:fossilized_dino
- cobblemon:fossilized_drake
- cobblemon:fossilized_fish
- cobblemon:helix_fossil
- cobblemon:jaw_fossil
- cobblemon:old_amber_fossil
- cobblemon:plume_fossil
- cobblemon:root_fossil
- cobblemon:sail_fossil
- cobblemon:skull_fossil

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fossil_machine_parts</summary>

- cobblemon:fossil_analyzer
- cobblemon:monitor
- cobblemon:restoration_tank

</details>

<details>
<summary><b>Tag:</b> #cobblemon:gilded_chests</summary>

- cobblemon:black_gilded_chest
- cobblemon:blue_gilded_chest
- cobblemon:gilded_chest
- cobblemon:green_gilded_chest
- cobblemon:pink_gilded_chest
- cobblemon:white_gilded_chest
- cobblemon:yellow_gilded_chest

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hanging_signs</summary>

- cobblemon:apricorn_hanging_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:herbs</summary>

- cobblemon:mental_herb
- cobblemon:mirror_herb
- cobblemon:power_herb
- cobblemon:revival_herb
- cobblemon:white_herb

</details>

<details>
<summary><b>Tag:</b> #cobblemon:ice_stone_ores</summary>

- cobblemon:deepslate_ice_stone_ore
- cobblemon:ice_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaf_stone_ores</summary>

- cobblemon:deepslate_leaf_stone_ore
- cobblemon:leaf_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:machines</summary>

- cobblemon:fossil_analyzer
- cobblemon:healing_machine
- cobblemon:monitor
- cobblemon:pasture
- cobblemon:pc
- cobblemon:restoration_tank

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mints</summary>

- cobblemon:adamant_mint
- cobblemon:bold_mint
- cobblemon:brave_mint
- cobblemon:calm_mint
- cobblemon:careful_mint
- cobblemon:gentle_mint
- cobblemon:hasty_mint
- cobblemon:impish_mint
- cobblemon:jolly_mint
- cobblemon:lax_mint
- cobblemon:lonely_mint
- cobblemon:mild_mint
- cobblemon:modest_mint
- cobblemon:naive_mint
- cobblemon:naughty_mint
- cobblemon:quiet_mint
- cobblemon:rash_mint
- cobblemon:relaxed_mint
- cobblemon:sassy_mint
- cobblemon:serious_mint
- cobblemon:timid_mint

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mint_leaf</summary>

- cobblemon:blue_mint_leaf
- cobblemon:cyan_mint_leaf
- cobblemon:green_mint_leaf
- cobblemon:pink_mint_leaf
- cobblemon:red_mint_leaf
- cobblemon:white_mint_leaf

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mint_seeds</summary>

- cobblemon:blue_mint_seeds
- cobblemon:cyan_mint_seeds
- cobblemon:green_mint_seeds
- cobblemon:pink_mint_seeds
- cobblemon:red_mint_seeds
- cobblemon:white_mint_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:moon_stone_ores</summary>

- cobblemon:deepslate_moon_stone_ore
- cobblemon:dripstone_moon_stone_ore
- cobblemon:moon_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:mutated_berries</summary>

- cobblemon:aguav_berry
- cobblemon:apicot_berry
- cobblemon:belue_berry
- cobblemon:cornn_berry
- cobblemon:custap_berry
- cobblemon:durin_berry
- cobblemon:enigma_berry
- cobblemon:figy_berry
- cobblemon:ganlon_berry
- cobblemon:grepa_berry
- cobblemon:hondew_berry
- cobblemon:hopo_berry
- cobblemon:iapapa_berry
- cobblemon:jaboca_berry
- cobblemon:kee_berry
- cobblemon:kelpsy_berry
- cobblemon:lansat_berry
- cobblemon:leppa_berry
- cobblemon:liechi_berry
- cobblemon:lum_berry
- cobblemon:mago_berry
- cobblemon:magost_berry
- cobblemon:maranga_berry
- cobblemon:micle_berry
- cobblemon:nomel_berry
- cobblemon:pamtre_berry
- cobblemon:petaya_berry
- cobblemon:pomeg_berry
- cobblemon:qualot_berry
- cobblemon:rabuta_berry
- cobblemon:rowap_berry
- cobblemon:salac_berry
- cobblemon:sitrus_berry
- cobblemon:spelon_berry
- cobblemon:starf_berry
- cobblemon:tamato_berry
- cobblemon:touga_berry
- cobblemon:watmel_berry
- cobblemon:wiki_berry

</details>

<details>
<summary><b>Tag:</b> #cobblemon:plants</summary>

- #cobblemon:apricorn_sprouts
- #cobblemon:apricorns
- #cobblemon:berries
- #cobblemon:herbs
- #cobblemon:mint_leaf
- #cobblemon:seeds
- cobblemon:big_root
- cobblemon:energy_root
- cobblemon:medicinal_leek
- cobblemon:pep_up_flower
- cobblemon:vivichoke

</details>

<details>
<summary><b>Tag:</b> #cobblemon:pokedex</summary>

- cobblemon:pokedex_black
- cobblemon:pokedex_blue
- cobblemon:pokedex_green
- cobblemon:pokedex_pink
- cobblemon:pokedex_red
- cobblemon:pokedex_white
- cobblemon:pokedex_yellow

</details>

<details>
<summary><b>Tag:</b> #cobblemon:pokedex_screen</summary>

- cobblemon:bright_powder
- minecraft:blaze_powder
- minecraft:glow_ink_sac
- minecraft:glowstone_dust
- minecraft:redstone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:poke_balls</summary>

- #cobblemon:ancient_poke_balls
- cobblemon:azure_ball
- cobblemon:beast_ball
- cobblemon:cherish_ball
- cobblemon:citrine_ball
- cobblemon:dive_ball
- cobblemon:dream_ball
- cobblemon:dusk_ball
- cobblemon:fast_ball
- cobblemon:friend_ball
- cobblemon:great_ball
- cobblemon:heal_ball
- cobblemon:heavy_ball
- cobblemon:level_ball
- cobblemon:love_ball
- cobblemon:lure_ball
- cobblemon:luxury_ball
- cobblemon:master_ball
- cobblemon:moon_ball
- cobblemon:nest_ball
- cobblemon:net_ball
- cobblemon:park_ball
- cobblemon:poke_ball
- cobblemon:premier_ball
- cobblemon:quick_ball
- cobblemon:repeat_ball
- cobblemon:roseate_ball
- cobblemon:safari_ball
- cobblemon:slate_ball
- cobblemon:sport_ball
- cobblemon:timer_ball
- cobblemon:ultra_ball
- cobblemon:verdant_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:poke_rods</summary>

- cobblemon:ancient_azure_rod
- cobblemon:ancient_citrine_rod
- cobblemon:ancient_feather_rod
- cobblemon:ancient_gigaton_rod
- cobblemon:ancient_great_rod
- cobblemon:ancient_heavy_rod
- cobblemon:ancient_ivory_rod
- cobblemon:ancient_jet_rod
- cobblemon:ancient_leaden_rod
- cobblemon:ancient_origin_rod
- cobblemon:ancient_poke_rod
- cobblemon:ancient_roseate_rod
- cobblemon:ancient_slate_rod
- cobblemon:ancient_ultra_rod
- cobblemon:ancient_verdant_rod
- cobblemon:ancient_wing_rod
- cobblemon:azure_rod
- cobblemon:beast_rod
- cobblemon:cherish_rod
- cobblemon:citrine_rod
- cobblemon:dive_rod
- cobblemon:dream_rod
- cobblemon:dusk_rod
- cobblemon:fast_rod
- cobblemon:friend_rod
- cobblemon:great_rod
- cobblemon:heal_rod
- cobblemon:heavy_rod
- cobblemon:level_rod
- cobblemon:love_rod
- cobblemon:lure_rod
- cobblemon:luxury_rod
- cobblemon:master_rod
- cobblemon:moon_rod
- cobblemon:nest_rod
- cobblemon:net_rod
- cobblemon:park_rod
- cobblemon:poke_rod
- cobblemon:premier_rod
- cobblemon:quick_rod
- cobblemon:repeat_rod
- cobblemon:roseate_rod
- cobblemon:safari_rod
- cobblemon:slate_rod
- cobblemon:sport_rod
- cobblemon:timer_rod
- cobblemon:ultra_rod
- cobblemon:verdant_rod

</details>

<details>
<summary><b>Tag:</b> #cobblemon:potions</summary>

- cobblemon:full_restore
- cobblemon:hyper_potion
- cobblemon:max_potion
- cobblemon:potion
- cobblemon:super_potion

</details>

<details>
<summary><b>Tag:</b> #cobblemon:protein_ingredients</summary>

- minecraft:beef
- minecraft:chicken
- minecraft:mutton
- minecraft:porkchop
- minecraft:rabbit

</details>

<details>
<summary><b>Tag:</b> #cobblemon:raw_meat</summary>

- minecraft:beef
- minecraft:chicken
- minecraft:cod
- minecraft:mutton
- minecraft:porkchop
- minecraft:rabbit
- minecraft:salmon

</details>

<details>
<summary><b>Tag:</b> #cobblemon:red_tumblestones</summary>

- cobblemon:chiseled_polished_tumblestone
- cobblemon:chiseled_tumblestone_bricks
- cobblemon:large_budding_tumblestone
- cobblemon:medium_budding_tumblestone
- cobblemon:polished_tumblestone
- cobblemon:polished_tumblestone_slab
- cobblemon:polished_tumblestone_stairs
- cobblemon:polished_tumblestone_wall
- cobblemon:small_budding_tumblestone
- cobblemon:smooth_tumblestone
- cobblemon:smooth_tumblestone_slab
- cobblemon:smooth_tumblestone_stairs
- cobblemon:tumblestone
- cobblemon:tumblestone_block
- cobblemon:tumblestone_brick_slab
- cobblemon:tumblestone_brick_stairs
- cobblemon:tumblestone_brick_wall
- cobblemon:tumblestone_bricks
- cobblemon:tumblestone_cluster

</details>

<details>
<summary><b>Tag:</b> #cobblemon:red_tumblestone_bricks</summary>

- cobblemon:chiseled_tumblestone_bricks
- cobblemon:tumblestone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:remedies</summary>

- cobblemon:fine_remedy
- cobblemon:heal_powder
- cobblemon:remedy
- cobblemon:superb_remedy

</details>

<details>
<summary><b>Tag:</b> #cobblemon:restores</summary>

- cobblemon:antidote
- cobblemon:awakening
- cobblemon:burn_heal
- cobblemon:full_heal
- cobblemon:full_restore
- cobblemon:ice_heal
- cobblemon:paralyze_heal

</details>

<details>
<summary><b>Tag:</b> #cobblemon:revives</summary>

- cobblemon:max_revive
- cobblemon:revive

</details>

<details>
<summary><b>Tag:</b> #cobblemon:seeds</summary>

- #cobblemon:held/terrain_seeds
- #cobblemon:mint_seeds
- cobblemon:vivichoke_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:shiny_stone_ores</summary>

- cobblemon:deepslate_shiny_stone_ore
- cobblemon:shiny_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- cobblemon:apricorn_sign

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sky_tumblestones</summary>

- cobblemon:chiseled_polished_sky_tumblestone
- cobblemon:chiseled_sky_tumblestone_bricks
- cobblemon:large_budding_sky_tumblestone
- cobblemon:medium_budding_sky_tumblestone
- cobblemon:polished_sky_tumblestone
- cobblemon:polished_sky_tumblestone_slab
- cobblemon:polished_sky_tumblestone_stairs
- cobblemon:polished_sky_tumblestone_wall
- cobblemon:sky_tumblestone
- cobblemon:sky_tumblestone_block
- cobblemon:sky_tumblestone_brick_slab
- cobblemon:sky_tumblestone_brick_stairs
- cobblemon:sky_tumblestone_brick_wall
- cobblemon:sky_tumblestone_bricks
- cobblemon:sky_tumblestone_cluster
- cobblemon:small_budding_sky_tumblestone
- cobblemon:smooth_sky_tumblestone
- cobblemon:smooth_sky_tumblestone_slab
- cobblemon:smooth_sky_tumblestone_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sky_tumblestone_bricks</summary>

- cobblemon:chiseled_sky_tumblestone_bricks
- cobblemon:sky_tumblestone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sun_stone_ores</summary>

- cobblemon:deepslate_sun_stone_ore
- cobblemon:sun_stone_ore
- cobblemon:terracotta_sun_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:sweets</summary>

- cobblemon:berry_sweet
- cobblemon:clover_sweet
- cobblemon:flower_sweet
- cobblemon:love_sweet
- cobblemon:ribbon_sweet
- cobblemon:star_sweet
- cobblemon:strawberry_sweet

</details>

<details>
<summary><b>Tag:</b> #cobblemon:teacups</summary>

- cobblemon:masterpiece_teacup
- cobblemon:unremarkable_teacup

</details>

<details>
<summary><b>Tag:</b> #cobblemon:teapots</summary>

- cobblemon:chipped_pot
- cobblemon:cracked_pot

</details>

<details>
<summary><b>Tag:</b> #cobblemon:thunder_stone_ores</summary>

- cobblemon:deepslate_thunder_stone_ore
- cobblemon:thunder_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_1_poke_balls</summary>

- cobblemon:ancient_azure_ball
- cobblemon:ancient_citrine_ball
- cobblemon:ancient_feather_ball
- cobblemon:ancient_heavy_ball
- cobblemon:ancient_ivory_ball
- cobblemon:ancient_poke_ball
- cobblemon:ancient_roseate_ball
- cobblemon:ancient_slate_ball
- cobblemon:ancient_verdant_ball
- cobblemon:azure_ball
- cobblemon:citrine_ball
- cobblemon:heal_ball
- cobblemon:poke_ball
- cobblemon:premier_ball
- cobblemon:roseate_ball
- cobblemon:safari_ball
- cobblemon:slate_ball
- cobblemon:verdant_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_1_poke_ball_materials</summary>

- #c:ingots/copper

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_2_poke_balls</summary>

- cobblemon:ancient_great_ball
- cobblemon:ancient_leaden_ball
- cobblemon:ancient_wing_ball
- cobblemon:dive_ball
- cobblemon:fast_ball
- cobblemon:friend_ball
- cobblemon:great_ball
- cobblemon:heavy_ball
- cobblemon:level_ball
- cobblemon:lure_ball
- cobblemon:moon_ball
- cobblemon:nest_ball
- cobblemon:net_ball
- cobblemon:park_ball
- cobblemon:sport_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_2_poke_ball_materials</summary>

- #c:ingots/iron

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_3_poke_balls</summary>

- cobblemon:ancient_gigaton_ball
- cobblemon:ancient_jet_ball
- cobblemon:ancient_ultra_ball
- cobblemon:dusk_ball
- cobblemon:love_ball
- cobblemon:luxury_ball
- cobblemon:quick_ball
- cobblemon:repeat_ball
- cobblemon:timer_ball
- cobblemon:ultra_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_3_poke_ball_materials</summary>

- #c:ingots/gold

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_4_poke_balls</summary>

- cobblemon:beast_ball
- cobblemon:dream_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_4_poke_ball_materials</summary>

- #c:gems/diamond

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tier_5_poke_balls</summary>

- cobblemon:ancient_origin_ball
- cobblemon:master_ball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tumblestones</summary>

- cobblemon:black_tumblestone
- cobblemon:sky_tumblestone
- cobblemon:tumblestone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:tumblestone_bricks</summary>

- #cobblemon:black_tumblestone_bricks
- #cobblemon:red_tumblestone_bricks
- #cobblemon:sky_tumblestone_bricks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:type_gems</summary>

- cobblemon:bug_gem
- cobblemon:dark_gem
- cobblemon:dragon_gem
- cobblemon:electric_gem
- cobblemon:fairy_gem
- cobblemon:fighting_gem
- cobblemon:fire_gem
- cobblemon:flying_gem
- cobblemon:ghost_gem
- cobblemon:grass_gem
- cobblemon:ground_gem
- cobblemon:ice_gem
- cobblemon:normal_gem
- cobblemon:poison_gem
- cobblemon:psychic_gem
- cobblemon:rock_gem
- cobblemon:steel_gem
- cobblemon:water_gem

</details>

<details>
<summary><b>Tag:</b> #cobblemon:vitamins</summary>

- cobblemon:calcium
- cobblemon:carbos
- cobblemon:hp_up
- cobblemon:iron
- cobblemon:pp_max
- cobblemon:pp_up
- cobblemon:protein
- cobblemon:zinc

</details>

<details>
<summary><b>Tag:</b> #cobblemon:water_stone_ores</summary>

- cobblemon:deepslate_water_stone_ore
- cobblemon:water_stone_ore

</details>

<details>
<summary><b>Tag:</b> #cobblemon:zinc_ingredients</summary>

- minecraft:cod
- minecraft:salmon
- minecraft:tropical_fish

</details>

<details>
<summary><b>Tag:</b> #cobblemon:blacklisted_items_to_hold</summary>


</details>

<details>
<summary><b>Tag:</b> #cobblemon:consumed_in_npc_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #cobblemon:consumed_in_pvp_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #cobblemon:consumed_in_wild_battle</summary>

- #cobblemon:berries

</details>

<details>
<summary><b>Tag:</b> #cobblemon:destiny_knot</summary>

- cobblemon:destiny_knot

</details>

<details>
<summary><b>Tag:</b> #cobblemon:everstone</summary>

- cobblemon:everstone

</details>

<details>
<summary><b>Tag:</b> #cobblemon:experience_share</summary>

- cobblemon:exp_share

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_friendship_booster</summary>

- cobblemon:soothe_bell

</details>

<details>
<summary><b>Tag:</b> #cobblemon:is_held_item</summary>

- #cobblemon:held/terrain_seeds
- #cobblemon:type_gems
- cobblemon:ability_shield
- cobblemon:absorb_bulb
- cobblemon:air_balloon
- cobblemon:assault_vest
- cobblemon:big_root
- cobblemon:binding_band
- cobblemon:black_belt
- cobblemon:black_glasses
- cobblemon:black_sludge
- cobblemon:blunder_policy
- cobblemon:bright_powder
- cobblemon:cell_battery
- cobblemon:charcoal_stick
- cobblemon:choice_band
- cobblemon:choice_scarf
- cobblemon:choice_specs
- cobblemon:cleanse_tag
- cobblemon:covert_cloak
- cobblemon:damp_rock
- cobblemon:deep_sea_scale
- cobblemon:deep_sea_scale
- cobblemon:deep_sea_tooth
- cobblemon:deep_sea_tooth
- cobblemon:destiny_knot
- cobblemon:dragon_fang
- cobblemon:eject_button
- cobblemon:eject_pack
- cobblemon:everstone
- cobblemon:eviolite
- cobblemon:exp_share
- cobblemon:expert_belt
- cobblemon:fairy_feather
- cobblemon:flame_orb
- cobblemon:flame_orb
- cobblemon:float_stone
- cobblemon:focus_band
- cobblemon:focus_sash
- cobblemon:hard_stone
- cobblemon:heat_rock
- cobblemon:heavy_duty_boots
- cobblemon:icy_rock
- cobblemon:iron_ball
- cobblemon:kings_rock
- cobblemon:kings_rock
- cobblemon:leftovers
- cobblemon:life_orb
- cobblemon:life_orb
- cobblemon:light_ball
- cobblemon:light_clay
- cobblemon:loaded_dice
- cobblemon:lucky_egg
- cobblemon:lucky_egg
- cobblemon:magnet
- cobblemon:medicinal_leek
- cobblemon:mental_herb
- cobblemon:metal_coat
- cobblemon:metal_coat
- cobblemon:metal_powder
- cobblemon:metronome
- cobblemon:miracle_seed
- cobblemon:mirror_herb
- cobblemon:muscle_band
- cobblemon:mystic_water
- cobblemon:never_melt_ice
- cobblemon:poison_barb
- cobblemon:power_anklet
- cobblemon:power_band
- cobblemon:power_belt
- cobblemon:power_bracer
- cobblemon:power_herb
- cobblemon:power_lens
- cobblemon:power_weight
- cobblemon:protective_pads
- cobblemon:punching_glove
- cobblemon:quick_claw
- cobblemon:quick_powder
- cobblemon:razor_claw
- cobblemon:razor_fang
- cobblemon:red_card
- cobblemon:ring_target
- cobblemon:rocky_helmet
- cobblemon:room_service
- cobblemon:safety_goggles
- cobblemon:scope_lens
- cobblemon:scope_lens
- cobblemon:sharp_beak
- cobblemon:shed_shell
- cobblemon:shell_bell
- cobblemon:silk_scarf
- cobblemon:silver_powder
- cobblemon:smoke_ball
- cobblemon:smoke_ball
- cobblemon:smooth_rock
- cobblemon:soft_sand
- cobblemon:spell_tag
- cobblemon:sticky_barb
- cobblemon:terrain_extender
- cobblemon:terrain_extender
- cobblemon:throat_spray
- cobblemon:throat_spray
- cobblemon:toxic_orb
- cobblemon:toxic_orb
- cobblemon:twisted_spoon
- cobblemon:utility_umbrella
- cobblemon:utility_umbrella
- cobblemon:weakness_policy
- cobblemon:white_herb
- cobblemon:white_herb
- cobblemon:wide_lens
- cobblemon:wide_lens
- cobblemon:wise_glasses
- cobblemon:zoom_lens
- cobblemon:zoom_lens
- minecraft:bone
- minecraft:snowball

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaves_leftovers</summary>

- minecraft:apple

</details>

<details>
<summary><b>Tag:</b> #cobblemon:lucky_egg</summary>

- cobblemon:lucky_egg

</details>

<details>
<summary><b>Tag:</b> #cobblemon:power_anklet</summary>

- cobblemon:power_anklet

</details>

<details>
<summary><b>Tag:</b> #cobblemon:power_band</summary>

- cobblemon:power_band

</details>

<details>
<summary><b>Tag:</b> #cobblemon:power_belt</summary>

- cobblemon:power_belt

</details>

<details>
<summary><b>Tag:</b> #cobblemon:power_bracer</summary>

- cobblemon:power_bracer

</details>

<details>
<summary><b>Tag:</b> #cobblemon:power_lens</summary>

- cobblemon:power_lens

</details>

<details>
<summary><b>Tag:</b> #cobblemon:power_weight</summary>

- cobblemon:power_weight

</details>

<details>
<summary><b>Tag:</b> #cobblemon:terrain_seeds</summary>

- cobblemon:electric_seed
- cobblemon:grassy_seed
- cobblemon:misty_seed
- cobblemon:psychic_seed

</details>

<details>
<summary><b>Tag:</b> #cobblemon:whitelisted_items_to_hold</summary>


</details>

<details>
<summary><b>Tag:</b> #cobblemon:face</summary>

- cobblemon:black_glasses
- cobblemon:choice_specs
- cobblemon:safety_goggles
- cobblemon:wise_glasses

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hat</summary>

- #minecraft:banners
- cobblemon:choice_band
- cobblemon:exp_share
- cobblemon:focus_band
- cobblemon:kings_rock
- cobblemon:muscle_band
- cobblemon:rocky_helmet

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hidden</summary>

- minecraft:barrier

</details>

<details>
<summary><b>Tag:</b> #cobblemon:boats</summary>

- #cobblemon:boats

</details>

<details>
<summary><b>Tag:</b> #cobblemon:bookshelf_books</summary>

- #cobblemon:pokedex

</details>

<details>
<summary><b>Tag:</b> #cobblemon:chest_boats</summary>

- cobblemon:apricorn_chest_boat

</details>

<details>
<summary><b>Tag:</b> #cobblemon:decorated_pot_sherds</summary>

- #cobblemon:decorated_pot_sherds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fence_gates</summary>

- cobblemon:apricorn_fence_gate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:flowers</summary>

- cobblemon:pep_up_flower

</details>

<details>
<summary><b>Tag:</b> #cobblemon:hanging_signs</summary>

- #cobblemon:hanging_signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:leaves</summary>

- cobblemon:apricorn_leaves

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs</summary>

- #cobblemon:apricorn_logs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:logs_that_burn</summary>

- #cobblemon:apricorn_logs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:parrot_food</summary>

- #cobblemon:seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:piglin_loved</summary>

- #cobblemon:gilded_chests
- cobblemon:relic_coin
- cobblemon:relic_coin_pouch
- cobblemon:relic_coin_sack

</details>

<details>
<summary><b>Tag:</b> #cobblemon:planks</summary>

- cobblemon:apricorn_planks

</details>

<details>
<summary><b>Tag:</b> #cobblemon:signs</summary>

- #cobblemon:signs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:slabs</summary>

- cobblemon:black_tumblestone_brick_slab
- cobblemon:polished_black_tumblestone_slab
- cobblemon:polished_sky_tumblestone_slab
- cobblemon:polished_tumblestone_slab
- cobblemon:sky_tumblestone_brick_slab
- cobblemon:smooth_black_tumblestone_slab
- cobblemon:smooth_sky_tumblestone_slab
- cobblemon:smooth_tumblestone_slab
- cobblemon:tumblestone_brick_slab

</details>

<details>
<summary><b>Tag:</b> #cobblemon:stairs</summary>

- cobblemon:black_tumblestone_brick_stairs
- cobblemon:polished_black_tumblestone_stairs
- cobblemon:polished_sky_tumblestone_stairs
- cobblemon:polished_tumblestone_stairs
- cobblemon:sky_tumblestone_brick_stairs
- cobblemon:smooth_black_tumblestone_stairs
- cobblemon:smooth_sky_tumblestone_stairs
- cobblemon:smooth_tumblestone_stairs
- cobblemon:tumblestone_brick_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:trim_templates</summary>

- cobblemon:automaton_armor_trim_smithing_template

</details>

<details>
<summary><b>Tag:</b> #cobblemon:villager_plantable_seeds</summary>

- cobblemon:blue_mint_seeds
- cobblemon:cyan_mint_seeds
- cobblemon:green_mint_seeds
- cobblemon:pink_mint_seeds
- cobblemon:red_mint_seeds
- cobblemon:revival_herb
- cobblemon:vivichoke_seeds
- cobblemon:white_mint_seeds

</details>

<details>
<summary><b>Tag:</b> #cobblemon:walls</summary>

- cobblemon:black_tumblestone_brick_wall
- cobblemon:polished_black_tumblestone_wall
- cobblemon:polished_sky_tumblestone_wall
- cobblemon:polished_tumblestone_wall
- cobblemon:sky_tumblestone_brick_wall
- cobblemon:tumblestone_brick_wall

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_buttons</summary>

- cobblemon:apricorn_button

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_doors</summary>

- cobblemon:apricorn_door

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_fences</summary>

- cobblemon:apricorn_fence

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_pressure_plates</summary>

- cobblemon:apricorn_pressure_plate

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_slabs</summary>

- cobblemon:apricorn_slab

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_stairs</summary>

- cobblemon:apricorn_stairs

</details>

<details>
<summary><b>Tag:</b> #cobblemon:wooden_trapdoors</summary>

- cobblemon:apricorn_trapdoor

</details>

<details>
<summary><b>Tag:</b> #cobblemon:durability</summary>

- #cobblemon:poke_rods

</details>

<details>
<summary><b>Tag:</b> #cobblemon:fishing</summary>

- #cobblemon:poke_rods

</details>
